@@ -1,3 +1,4 @@
+requires "Devel::StrictMode" => "0";
 requires "Moo" => "1.006000";
 requires "Types::Const" => "v0.3.3";
 requires "Types::Standard" => "0";
